classDiagram
    class Animal {
        +String especie
        #int idade
        +emitirSom()* String
        +dormir() void
    }

    class IPet {
        <<interface>>
        +nome: String
        +brincar() void
    }

    class Cachorro {
        +String nome
        +emitirSom() String
        -enterrarOsso() void
    }

    Animal <|-- Cachorro : Herança
    IPet <|.. Cachorro : Implementação

    class MetodoPagamento {
        + pagar(valor)
    }